# learning-rust

./: Cargo.toml  README.md  main  main.rs
src/: foo.rs  foobar.rs  main.rs  test1  test1.rs  test_basic.rs  test_hash_map.rs  test_match.rs  test_module.rs  test_string.rs  test_struct.rs  test_test.rs  test_vec.rs
tests/: bar_test.rs  foo_test.rs
