[package]
name = "learning-rust"
version = "0.1.0"
edition = "2018"
authors = ["Akira Ikeda <pinpon.ikeda@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.14"
regex = "1.5.4"
# sdl2 = "0.31.0"
# sdl2 = "0.34"

# [dependencies.sdl2]
# git = "https://github.com/rust-sdl2/rust-sdl2"

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["image"]

